# famichat

./: .cursorrules  .cursorrules.commit  .gitignore  .lefthook.yml  AGENTS.md  CHANGELOG.md  README.md  ROADMAP.md  STATUS.md  code_output.md  copy-for-llm.sh  docker-compose.yml  project.md
.claude/: settings.json
.devcontainer/: devcontainer.json
_agents/: AGENTS.md  The Iterated Implementation Plan (v3).md  docker-based-environment-rules.mdc  elixir-guidelines.mdc  frontend-guidelines.mdc  liveview-optimization.mdc  telemetry-best-practices.mdc  ux-writing-guidelines.mdc  writing-elixir-tests.mdc
backend/: .credo.exs  .cursorrules  .cursorrules.frontend  .dialyzer_ignore.exs  .dockerignore  .env.example  .env.production.example  .gitignore  .lefthook.yml  .sobelow-conf  CHANGELOG.md  Dockerfile  coveralls.json  docker-compose.production.yml  docker-compose.yml  get_token.exs  mix.exs  query_details.exs  query_invites.exs  query_tables.exs  query_tokens.exs  query_tokens2.exs  query_users.exs  run  rust-toolchain.toml  setup-format-check.bat  setup-format-check.sh  test_config.exs  test_fixes.exs
backend/infra/mls_nif/: AUDIT.md  Cargo.toml  PHASE1_CRITIQUE.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  README.md
backend/infra/mls_nif/src/: lib.rs
backend/infra/mls_wasm/: .gitignore  Cargo.toml  package.json
backend/infra/mls_wasm/js/: security_tests.mjs  test.mjs
backend/infra/mls_wasm/src/: lib.rs
docs/: API-DESIGN.md  ARCHITECTURE.md  BACKLOG-ARCHIVE.md  BACKLOG.md  DECISIONS.md  E2EE_INTEGRATION.md  ENCRYPTION.md  LAYER-DEPENDENCIES.md  NOW.md  (+12 more)
(+586 files in other folders)
