[package]
name = "mls_wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
publish = false
description = "Famichat OpenMLS → WASM spike (not production code)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openmls = { version = "0.8.1", features = ["js"] }
openmls_rust_crypto = "0.5.1"
openmls_basic_credential = "0.5.0"
openmls_memory_storage = "0.5.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
strip = true
